# reinforcement-learning-solitaire

./: .pre-commit-config.yaml  GETTING_STARTED.md  README.md  play_gridworld_terminal.py  play_gridworld_tkinter.py  pyproject.toml  requirements.txt
.claude/: CODE_INSTRUCTIONS.md  README.md
.github/workflows/: ci.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-web-infrastructure-and-core-loop/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-learning-metrics-dashboard/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-advanced-visualization/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: ARCHITECTURE.md  FEATURES.md  PROJECT_CONTEXT.md
docs/learning_notes/: README.md
docs/templates/: FEATURE_TEMPLATE.md  REQUIREMENTS_TEMPLATE.md
scripts/: check_docs_update.py
src/: __init__.py  main.py
src/gridworld/: agent.py  config.py  environment.py  play.py  play_tkinter.py  server.py  train.py
static/: app.js  index.html  styles.css
tests/: conftest.py  test_agent.py  test_gridworld.py  test_main.py
